# thermostat-backend

./: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  README.md  add_sample_data.py  alembic.ini  docker-compose.yml  openapi.yaml  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 1be8233b83a5_remove_entity_id_from_daily_power_usage.py  2fafa8278854_add_daily_power_usage_table.py  49bbffc8e5a9_create_new_daily_power_usage_table.py
thermostat_backend/: database.py  home_assistant.py  main.py  models.py  routers.py  schemas.py  services.py
